<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.se.gamesuite.MainActivity" >
    
    <ImageView
        android:contentDescription="@string/main_image"
        android:id="@+id/logo"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:paddingTop="@dimen/image_padding_top"
        android:paddingBottom="@dimen/image_padding_bottom" />

    <Button
        android:id="@+id/play_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button"
        android:text="@string/play_games" />
    
    <Button
        android:id="@+id/exit_button"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button"
        android:text="@string/exit_game" />

        
</RelativeLayout>
